--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,223 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #99ddFF;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.App {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.App-logo {
+  height: 50%;
+  pointer-events: none;
+  display: flex;
+}
+
+.App-header {
+  background-color: #282c34;
+  height: 10vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  color: white;
+  padding: 0 2vmin;
+}
+
+.App-intro {
+  font-size: large;
+}
+
+.Task-list-cont{
+  width: 80%;
+  padding: 20px 40px;
+  font-family: sans-serif;
+  display: flex;
+  align-self: center;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+}
+
+.task-label-cont{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-items: space-between;
+}
+
+.task-label{
+  margin: 3%;
+  display: flex;
+  flex-grow: 1;
+  height: 4vh;
+  border: none;
+  text-align: center;
+  justify-content: center;
+}
+.lateral-task{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.dot{
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  margin-right: 4px;
+  display: flex;
+}
+
+.label-text{
+  color: white;
+  font-size: medium;
+}
+.list-header{
+  width:100%;
+  display: flex;
+  justify-content: space-around; 
+}
+.add-input {
+  padding: 10px;
+  font-size: 16px;
+  border: 2px solid #FFF;
+  width: 60%;
+  margin-right: 10px;
+  height: 1.2rem;
+}
+select{
+  -webkit-appearance: none;
+  color: white;
+  font-size: medium;
+}
+.add-btn {
+  width: 2.5rem;
+  padding: 4px;
+  font-size: 16px;
+  margin: 0px;
+  background-color: rgba(255,255,255,.5);
+  color: #FFF;
+  border: 2px solid #AAA;
+  border-radius: 4px;
+}
+.add-btn:hover {
+  background-color: #eee;
+  border: 2px solid #AAA;
+  cursor: pointer;
+  box-shadow: 0px 0px 4px 3px rgba(255,255,255,0.4);
+}
+.choose-label{
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+}
+.choose-label:checked{
+  background-color: #000;
+}
+.task-list {
+  list-style: none;
+  padding: 8px;
+  width: 95%;
+} 
+.the-task {
+  color: #333;
+  background-color: rgba(255,255,255,.5);
+  padding: 0;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  list-style: none;
+  text-align: left;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+/* delete btn */
+
+.delete-btn{
+  display: flex;
+  background-color: transparent;
+  background-repeat:no-repeat;
+  border: none;
+  cursor:pointer;
+  overflow: hidden;
+}
+
+.delete-btn-img{
+  height: 1.5rem;
+  background: url('./rubbish-bin.svg');
+
+}
+
+.delete-btn-img:hover{
+  fill: red;
+  background: url('./rubbish-bin-red.svg');
+}
+
+
+/*Checkbox*/
+
+h1 {
+  margin-bottom: 2rem;
+  font-size: 2.4rem;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+h1 span {
+  display: block;
+  color: #5dceee;
+}
+
+.content {
+  margin: 2rem;
+}
+
+.m-checkbox {
+  display: flex;
+  align-items: center;
+  padding: .5rem;
+}
+.m-checkbox__label {
+  flex-shrink: 0;
+  padding: .5rem 1rem;
+  color: #282c34;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: default;
+}
+.m-checkbox__input {
+  position: relative;
+  flex-shrink: 0;
+  width: 24px;
+  height: 24px;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  outline: none;
+  background: transparent;
+  cursor: pointer;
+  border: 2px solid #5dceee;
+}
+.m-checkbox__input::before {
+  content: ' ';
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  bottom: 50%;
+  left: 50%;
+  transition: all .1s;
+  background: #5dceee;
+}
+.m-checkbox__input:checked::before, .m-checkbox__input:indeterminate::before {
+  top: 2px;
+  right: 2px;
+  bottom: 2px;
+  left: 2px;
 }
