--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@ body {
   margin: 3%;
   display: flex;
   flex-grow: 1;
-  height: 4vh;
+  height: 3rem;
   border: none;
   text-align: center;
   justify-content: center;
@@ -93,15 +93,21 @@ body {
   border: 2px solid #FFF;
   width: 60%;
   margin-right: 10px;
-  height: 1.2rem;
+  height: 1rem;
 }
 select{
   -webkit-appearance: none;
   color: white;
   font-size: medium;
+  width: 20%;
+  max-width: 150px;
+  margin-right: 10px;
+  align-content: center;
+  padding: 0 10px;
 }
 .add-btn {
   width: 2.5rem;
+  height: 2.5rem;
   padding: 4px;
   font-size: 16px;
   margin: 0px;
