--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,6 @@ body {
   background-color: #99ddFF;
 
 }
-
 .App {
   text-align: center;
   display: flex;
@@ -38,6 +37,8 @@ body {
   font-size: large;
 }
 
+/* Task List */
+
 .Task-list-cont{
   width: 80%;
   padding: 20px 40px;
@@ -65,28 +66,20 @@ body {
   text-align: center;
   justify-content: center;
 }
-.lateral-task{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-.dot{
-  height: 25px;
-  width: 25px;
-  border-radius: 50%;
-  margin-right: 4px;
-  display: flex;
-}
 
 .label-text{
   color: white;
   font-size: medium;
 }
+
+/* Add Task Field */
+
 .list-header{
   width:100%;
   display: flex;
   justify-content: space-around; 
 }
+
 .add-input {
   padding: 10px;
   font-size: 16px;
@@ -95,6 +88,8 @@ body {
   margin-right: 10px;
   height: 1rem;
 }
+
+
 select{
   -webkit-appearance: none;
   color: white;
@@ -122,19 +117,15 @@ select{
   cursor: pointer;
   box-shadow: 0px 0px 4px 3px rgba(255,255,255,0.4);
 }
-.choose-label{
-  height: 25px;
-  width: 25px;
-  background-color: #eee;
-}
-.choose-label:checked{
-  background-color: #000;
-}
+
 .task-list {
   list-style: none;
   padding: 8px;
   width: 95%;
-} 
+}
+
+/* Each Task */
+
 .the-task {
   color: #333;
   background-color: rgba(255,255,255,.5);
@@ -149,8 +140,19 @@ select{
   align-items: center;
 }
 
+.lateral-task{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
 
-/* delete btn */
+.dot{
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  margin-right: 4px;
+  display: flex;
+}
 
 .delete-btn{
   display: flex;
@@ -181,6 +183,7 @@ h1 {
   font-weight: 400;
   text-transform: uppercase;
 }
+
 h1 span {
   display: block;
   color: #5dceee;
@@ -203,6 +206,7 @@ h1 span {
   font-weight: bold;
   cursor: default;
 }
+
 .m-checkbox__input {
   position: relative;
   flex-shrink: 0;
@@ -231,4 +235,45 @@ h1 span {
   right: 2px;
   bottom: 2px;
   left: 2px;
+}
+
+@media only screen and (max-width: 420px){
+  .Task-list-cont{
+    width: 90%;
+    padding: 20px 20px;
+  }
+  .m-checkbox__label{
+  font-size: 12px;
+  }
+  .m-checkbox__input {
+    width: 16px;
+    height: 16px;
+  } 
+  .dot{
+    height: 1rem;
+    width: 1rem;
+  } 
+  .delete-btn-img{
+    height: 1.2rem;
+  }
+}
+
+.load{
+  padding: 42px;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+  transition: 2s
+}
+
+.alert{
+  display: none;
+}
+
+.alert.hide{
+  display: flex;
 }
